CORS support setup DS2413 devices

--- a/htmljs/src/partials/header.html
+++ b/htmljs/src/partials/header.html
@@ -7,12 +7,12 @@
             <span></span>
             <span></span>
             <ul class="options">
-                <li><a href="/index.htm">graph</a></li>
-                <li><a href="/control.htm">control</a></li>
-                <li><a href="/logging.htm">logs</a></li>
-                <li><a href="/setup.htm">setup</a></li>
-                <li><a href="/config.htm">config</a></li>
-                <li><a href="/gravity.htm">gravity</a></li>
+                <li><a href="/index.html">graph</a></li>
+                <li><a href="/control.html">control</a></li>
+                <li><a href="/logging.html">logs</a></li>
+                <li><a href="/setup.html">setup</a></li>
+                <li><a href="/config.html">config</a></li>
+                <li><a href="/gravity.html">gravity</a></li>
             </ul>
         </div>
     </div>
